--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,37 +2,34 @@
 #
 # SPDX-License-Identifier: EUPL-1.2
 
-[tool.poetry]
+[project]
 name = "utility-scripts"
 version = "0.1.0"
 description = ""
-authors = ["Benedikt Fein <fein@fim.uni-passau.de>"]
-license = "EUPL-1.2"
-readme = "Readme.adoc"
-packages = [
-    { include = "utility_scripts", from = "src" }
+authors = [
+    { name = "Benedikt Fein", email = "fein@fim.uni-passau.de" }
+]
+license = { file = "LICENSE" }
+classifiers = [
+    "License :: OSI Approved :: EUPL-1.2"
+]
+readme = "Readme.md"
+requires-python = ">=3.11"
+dependencies = [
+    "python-gitlab>=5.6.0"
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.11,<4"
-python-gitlab = "5.6.0"
-
-[tool.poetry.group.dev.dependencies]
-black = "~25.1.0"
-isort = "~6.0.0"
-mypy = "~1.15.0"
-reuse = "~5.0.0"
-ruff = "~0.9.0"
+[dependency-groups]
+dev = [
+    "isort>=6.0.0",
+    "mypy>=1.15.0",
+    "reuse>=5.0.0",
+    "ruff>=0.9.0",
+]
 
 
-[tool.poetry.scripts]
+[project.scripts]
 fix-webhook-url = "utility_scripts.fix_webhook_url:main"
-
-
-[tool.black]
-line-length = 88
-target_version = ["py311"]
-include = '\.pyi?$'
 
 
 [tool.isort]
@@ -75,5 +72,5 @@ warn_unused_ignores = true
 
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
