--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ classifiers = [
 readme = "Readme.md"
 requires-python = ">=3.11"
 dependencies = [
-    "python-gitlab>=5.6.0"
+    "python-gitlab>=5.6.0",
+    "requests>=2.32.3",
 ]
 
 [dependency-groups]
@@ -24,12 +25,14 @@ dev = [
     "isort>=6.0.0",
     "mypy>=1.15.0",
     "reuse>=5.0.0",
-    "ruff>=0.9.0",
+    "ruff>=0.10.0",
+    "types-requests>=2.32.0.20250306",
 ]
 
 
 [project.scripts]
 fix-webhook-url = "utility_scripts.fix_webhook_url:main"
+create-guest-users = "utility_scripts.create_guest_users:main"
 
 
 [tool.isort]
@@ -50,7 +53,6 @@ exclude = [
     ".mypy_cache",
     ".pytest_cache",
 ]
-target-version = "py311"
 
 [tool.ruff.lint.mccabe]
 max-complexity = 10
