--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,5 +77,5 @@ warn_unused_ignores = true
 
 
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["uv_build>=0.9.0,<0.10.0"]
+build-backend = "uv_build"
